--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+html{
+	box-sizing: border-box;
+}
+*, *:before, *:after{
+	box-sizing: inherit;
+}
 body{
 	background-color: LightGray; 
 	font-family: 'Roboto', sans-serif; 
