--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,6 @@ body{
 	-webkit-font-smoothing: antialiased;
 }
 
-div{
-	border: 1px solid Chocolate;
-}
-
 .top-navigation{
 	background-color: #fff; 
 	position: fixed;
@@ -35,17 +31,18 @@ div{
 	transition: color 0.1s ease; 
 	cursor: pointer;
 }
-.top-navigation .links > li:hover{
+.top-navigation.links > li:hover{
 	color: black;
 }
 .links{
-	margin: -2em 10em; 	
+	margin: -3em 10em; 	
 }
 .top-navigation .links > .active{
 	color: #4c5058;
 	font-weight: 500; 
 }
 .logo{
+	margin: 1em; 
 	padding: 0px 5px;
 	width: 2em;
 }
@@ -61,9 +58,10 @@ div{
 	padding: 20em;
 	box-sizing: border-box;
 	font-family: 'Roboto', sans-serif; 
-	font-size: 18px; 
+	font-size: 20px; 
 	margin: 0 auto;
 	text-align: center;
+ 
 }
 button{
 	text-shadow: none;
@@ -73,13 +71,13 @@ button{
 	margin: 0 auto; 
 	padding: 1rem 1.5rem;
 	width: 10em; 
-	background-color:;
+	background-color:#d8400e;
 	font-size: 
 	color: #fff;
 	cursor: pointer;
 }
 button:hover{
-	background-color: #f15a00; 
+	background-color: #f15a29; 
 }
 section{
 	display: block;
@@ -94,13 +92,74 @@ section{
 	text-align: center;
 	font-size: 1.2em; 
 }
+.content h2{
+	margin: 2.5em auto 1.5em;
+	font-size: 2.3em; 
+	color: black; 
+	font-weight: 300;
+}
+.content .caption h3{
+	font-size: 1.3em; 
+	color: #000; 
+	font-weight: 400;
+	width: 10.5em; 	
+}
 .cases .content li{
 	display: inline-block;
-	margin: 4em;
 	text-align: center;
 	padding: 1em;
 	font-weight: 400; 
-	width: 20%; 
+	width: 14em; 
 	box-sizing: border-box;
 	height: 4em
+}
+footer > .content{
+	padding: 0 0.938rem; 
+	margin: 0 auto; 
+	min-width: 37.5rem; 
+	background-color: white; 
+	overflow: auto;
+	text-align: center;
+	padding-bottom: 9.375rem; 
+}
+.icon li {
+	border-radius: 1.25rem;
+	width: 2.5rem; 
+	height: 2.5rem; 
+	display: inline-block;
+	margin: -0.3em 5px; 
+	border: 1px solid #eaebec;
+	padding: 0.625rem 0; 
+}
+li.twitter{
+	color: #55acee; 
+}
+li.facebook{
+	color: #4c66a4; 
+}
+li.instagram{
+	color: #3f729b;
+}
+hr{
+	border: 0; 
+	border-top: 1px solid #eaebec; 
+	margin: 1.313rem 0; 
+}
+footer h5{
+	font-weight: 400; 
+	font-size: 1em;
+	color: #000; 
+	margin-left: 3em; 
+}
+span.copy{
+	font-size: 0.9em; 
+	letter-spacing: 0.02em; 
+	margin-left: 3em; 
+}
+.transition{
+  -webkit-transition: all .5s ease;
+  -moz-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  -ms-transition: all .5s ease;
+  transition: all .5s ease;
 }
