--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body{
 	width: 2em;
 }
 .introduction{
-	background-image: url("../image/background image.jpg");
+	background-image: url("../image/first-background copy.jpg");
 	background-position: 0 bottom;
 	background-repeat: no-repeat;
 	background-size: cover;
